--- a/resume1/index.html
+++ b/resume1/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="text">
         <h4>Senior Fullstack Developer</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem distinctio quibusdam quasi, quam necessitatibus deserunt. </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing lit. Quidem distinctio quibusdam quasi, quam necessitatibus deserunt. </p>
         </div>
         </div>
         <div class="box">
